--- a/blog/src/app/page.module.css
+++ b/blog/src/app/page.module.css
@@ -9,9 +9,7 @@
 .posts {
 	max-width: var(--max-width);
 }
-.truncate {
-	max-height: 20vh !important;
-}
+
 .divider {
 	margin-top: 0.8rem;
 	width: 100%;
@@ -46,7 +44,9 @@
 
 .content {
 	width: 100%;
-	opacity: 1;
+
+	width: calc(100vw - 0.2rem);
+	max-width: var(--max-width);
 }
 
 .description {
@@ -90,11 +90,17 @@
 	background: rgba(var(--card-rgb), 0.15);
 	border: 1px solid rgba(var(--card-border-rgb), 0);
 	transition: background 200ms, border 200ms;
+	width: calc(100vw - 0.3rem);
+	max-width: var(--max-width);
+}
+
+.card:hover {
+	/* transition: 150ms ease-in; */
+	opacity: 1;
 }
 
 .card span {
 	display: inline-block;
-	transition: transform 200ms;
 }
 
 .card h2 {
@@ -153,10 +159,6 @@
 	.card:hover {
 		background: rgba(var(--card-rgb), 0.1);
 		border: 1px solid rgba(var(--card-border-rgb), 0.15);
-	}
-
-	.card:hover span {
-		transform: translateX(4px);
 	}
 }
 
